
= openwferu-densha CHANGELOG.txt


== densha - 0.9.18    not yet released

- todo  #20221 : using the actual process representation for /process and
                 /workitem, not the definition as launched
- todo  #20165 : refactored around filter_fields in the workitem controller
- todo  #20146 : calling workitems() without args yields all workitems 
                 accessible to the user
- todo  #19766 : implemented "delegate" (to store)
- patch #20014 : nil HTTP_REFERER patch by Arjan
- patch #19759 : "last_modified_by" patch by Arjan
- patch #19684 : patch for custom forms (partials) determined by [participant]
                 activity (by Arjan van Bentem)
- todo  #19747 : implement 'pick workitem' as suggested by Arjan van Bentem
- switched to http://github.com/jmettraux/ruote-web
- todo  #19065 : upgraded to Rails 2.0.2 (should be OK with 1.2.6) - s1632


== densha - 0.9.17    released 2007/03/17

- todo  #18794 : implemented special user store (inbox) - s1612
- todo  #18717 : implemented download/upload of exps as yaml - s1602
- todo  #18659 : turned densha-workitem into densha-hash and integrated
                 it into /process/edit - s1584
- todo  #18648 : adapted search to special 'users' store - s1574
- todo  #18642 : eadmin --> processes, wadmin --> worklist, ... - s1573
- bug   #18636 : broken " and ' handling in workitem edition. Fixed - s1567
- todo  #18633 : added :gem_install_workflow_engine rake task - s1566
- todo  #18471 : implemented first iteration of 'process gardening' - s1553
- todo  #16684 : ordering processes by launchtime in /eadmin - s1546
- todo  #16368 : implemented batch ops in /eadmin - s1544
- todo  #16814 : 'abort' instead of 'cancel' in /eadmin - s1543
- todo  #18468 : added process definition upload to /wadmin - s1543
- todo  #17950 : added :install_workflow_engine rake task - s1501
- todo  #16734 : better error message when launchp references inexistent