@@ -1,0 +1,15 @@
+#
+# groups (and their members)
+#
+g1:
+  id: 1
+  name: sales
+  username: alice
+g2:
+  id: 2
+  name: production
+  username: bob
+g3:
+  id: 3
+  name: production
+  username: charly
